2004-03-23  Borut Razem  <borut.razem@siol.net>
	* src/modules.cc: gpsim on WIN32 doesn't support modules yet
	* gui/gui_breadboard.cc: GTK+ 2.x port

2004-03-22 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src.cc: Changed the event key processing from a case statement to
	a C++ map object.
	
2004-03-22 Scott Dattalo  <scott@dattalo.com>
	* gui/gui.h, gui/gui_breadboard.h, gui/gui_object.h, gui/gui_processor.h,
	* gui/gui_profile.h, gui/gui_register.h, gui/gui_regwin.h, gui/gui_scope.h,
	* gui/gui_src.h, gui/gui_stack.h, gui/gui_stopwatch.h, gui/gui_symbols.h,
	* gui/gui_trace.h, gui/gui_watch.h:
	Finished the gui split started on 03-16. 
	Added support for multiple source browsers (to be used with context debugging).

	
2004-03-22 Chris Emerson <gpsim@mail.nosreme.org>
	* modules/encoder.cc, modules/encoder.h: new files: added an encoder module
	* modules/Makefile.am: Added the encoder to the list of files.
	* gpsim/main.cc: gracefully revert to cli if gtk_init fails.
	* src/ioports.cc: remove PORTA debug message.

2004-03-17 Scott Dattalo  <scott@dattalo.com>
	* gui/gui.h, gui/gui_breadboard.h, gui/gui_object.h, gui/gui_processor.h,
	* gui/gui_profile.h, gui/gui_register.h, gui/gui_regwin.h, gui/gui_scope.h,
	* gui/gui_src.h, gui/gui_stack.h, gui/gui_stopwatch.h, gui/gui_symbols.h,
	* gui/gui_trace.h, gui/gui_watch.h
	Split gui.h into a bunch of separate include files.

2004-03-16 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui.h:
	abstracted the width of registers

2004-03-15 Scott Dattalo  <scott@dattalo.com>
	* src/modules.h, src/modules.cc:
	Removed the "ExternalModule" class
	* modules/binary_indicator.cc, modules/gpsim_modules.cc,
	modules/led.cc, modules/logic.cc, modules/paraface.cc,
	modules/push_button.cc, modules/resistor.cc, modules/switch.cc,
	modules/usart.cc, modules/video.cc, extras/lcd/lcd.h, 
	extras/lcd/lcd.cc
	Now the modules are no longer "external".

2004-03-14  Bert Driehuis <driehuis@playbeing.org>